Initial structure: create demo emails, smd  display them on the page, with basic nav

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,3 +3,9 @@
 @import "basics/helpers.css";
 @import "basics/layout.css";
 @import "basics/animations.css";
+
+/* Pages */
+@import "./pages/home.css";
+
+/* Components */
+@import "./cmps/app-header.css";
