--- a/src/assets/css/basics/base.css
+++ b/src/assets/css/basics/base.css
@@ -1,18 +1,26 @@
+:root {
+    --mister-email-background: #f6f8fc;
+    --mister-email-background-secondary: #eaf1fb;
+    --mister-email-text: #202124;
+    --mister-email-text-secondary: #000;
+    --mister-email-hover: rgba(32, 33, 36, 0.059);
+    --mister-email-active: #d3e3fd;
+}
+
 * {
     box-sizing: border-box;
 }
 
 html {
-    font-family: OpenSans, sans-serif;
     font-size: 16px;
     scroll-behavior: smooth;
 }
 
 body {
+    color: var(--mister-email-text);
     margin: 0;
     min-height: 100vh;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-        "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: "Google Sans", Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -37,11 +45,6 @@ a {
     text-decoration: none;
     color: inherit;
     cursor: pointer;
-
-}
-
-a:hover {
-    text-decoration: underline;
 }
 
 button {
@@ -97,6 +100,5 @@ input {
 
 
 a.active {
-    color: rgb(84, 17, 147);
     font-weight: 600;
 }
