--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -6,6 +6,9 @@
 
 /* Pages */
 @import "./pages/home.css";
+@import "./pages/email-index.css";
 
 /* Components */
-@import "./cmps/app-header.css";
+@import "./cmps/email-list.css";
+@import "./cmps/email-filter.css";
+@import "./cmps/email-folder-list.css";
