--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -12,3 +12,4 @@
 @import "./cmps/email-list.css";
 @import "./cmps/email-filter.css";
 @import "./cmps/email-folder-list.css";
+@import "./cmps/email-preview.css";
