--- a/src/assets/css/cmps/email-filter.css
+++ b/src/assets/css/cmps/email-filter.css
@@ -9,7 +9,7 @@
 		display: flex;
 		flex: 1;
 		height: 48px;
-		padding-left: 10px;
+		margin-inline-start: 10px;
 	}
 
 	.email-filter__search-form:focus-within {
