--- a/src/assets/css/cmps/email-list.css
+++ b/src/assets/css/cmps/email-list.css
@@ -1,4 +1,9 @@
 .email-list {
-	list-style-type: none;
-	padding: 0;
+	height: calc(100vh - 64px - 16px);
+    overflow: hidden;
+	
+	.email-list__list {
+		height: 100%;
+		overflow-y: auto;
+	}
 }
