--- a/src/assets/css/cmps/email-preview.css
+++ b/src/assets/css/cmps/email-preview.css
@@ -1,23 +1,48 @@
 .email-preview {
 	background-color: #f2f6fc;
 	border-bottom: 1px solid rgba(128, 128, 128, 0.2);
-	display: grid;
-	gap: 10px;
-	grid-template-columns: 1fr 1fr 50fr;
 	line-height: 20px;
-	padding: 10px 0 10px 20px;
 	position: relative;
 
 	button {
 		background-color: transparent;
+		border: none;
+		cursor: pointer;
 	}
 
 	&:hover {
-		box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15);
+		/* box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15); */
+
+		.email-preview__checkbox {
+			opacity: 1;
+		}
+
+		.email-preview__star {
+			opacity: 1;
+		}
 	}
 
 	&.selected {
 		background-color: #c2dbff;
+
+		.email-preview__checkbox {
+			background-image: url(../../images/icons/checkbox-selected.png);
+			opacity: 1;
+		}
+
+		.email-preview__star {
+			opacity: 1;
+		}
+	}
+
+	&.hovered {
+		.email-preview__actions {
+			display: flex;
+		}
+
+		.email-preview__link {
+			grid-template-columns: 1fr 1fr 8fr 25fr 3fr 5fr;
+		}
 	}
 }
 
@@ -28,6 +53,7 @@
 	background-size: 20px;
 	border-width: 0;
 	height: 20px;
+	opacity: 0.32;
 	position: relative;
 	width: 20px;
 
@@ -56,10 +82,6 @@
 		opacity: 1;
 		transform: scale(1);
 	}
-
-	&.checked {
-		background-image: url(../../images/icons/checkbox-selected.png);
-	}
 }
 
 .email-preview__star {
@@ -73,6 +95,7 @@
 	z-index: 0;
 	height: 20px;
 	margin: 0;
+	opacity: 0.32;
 	padding: 0;
 	top: 0;
 	width: 20px;
@@ -129,7 +152,26 @@
 .email-preview__link {
 	display: grid;
 	gap: 10px;
-	grid-template-columns: 3fr 7fr 1fr;
+	grid-template-columns: 1fr 1fr 8fr 25fr 3fr;
+	padding: 10px 0 10px 20px;
+	position: relative;
+
+	&:hover {
+		box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15);
+		z-index: 2;
+	}
+}
+
+.email-preview__from {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.email-preview__text {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .email-preview__body {
@@ -138,4 +180,62 @@
 
 .email-preview__date {
 	color: var(--mister-email-text-secondary);
+	white-space: nowrap;
+}
+
+.email-preview__actions {
+	display: none;
+}
+
+.email-preview__action {
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 20px;
+	height: 20px;
+	margin-inline: 10px;
+	position: relative;
+	width: 20px;
+
+	&:hover::before {
+		background-color: rgba(32, 33, 36, 0.059);
+		border: none;
+		box-shadow: none;
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	&::before {
+		content: "";
+		display: block;
+		opacity: 0;
+		position: absolute;
+		transition-duration: 0.15s;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		z-index: -1;
+		background: none;
+		border-radius: 50%;
+		box-sizing: border-box;
+		transform: scale(0);
+		transition-property: transform, opacity;
+		bottom: -10px;
+		left: -10px;
+		right: -10px;
+		top: -10px;
+	}
+
+	&.archive {
+		background-image: url(../../images/icons/archive.png);
+	}
+
+	&.delete {
+		background-image: url(../../images/icons/delete.png);
+	}
+
+	&.unread {
+		background-image: url(../../images/icons/unread.png);
+	}
+
+	&.snooze {
+		background-image: url(../../images/icons/snooze.png);
+	}
 }
