--- a/src/assets/css/cmps/email-preview.css
+++ b/src/assets/css/cmps/email-preview.css
@@ -1,5 +1,5 @@
 .email-preview {
-	background-color: #f2f6fc;
+	background-color: transparent;
 	border-bottom: 1px solid rgba(128, 128, 128, 0.2);
 	line-height: 20px;
 	position: relative;
@@ -51,6 +51,22 @@
 			@media (max-width: 840px) {
 				display: none;
 			}
+		}
+	}
+	
+	&.read {
+		background-color: #f2f6fc;
+
+		.email-preview__subject {
+			font-weight: normal;
+		}
+
+		.email-preview__from {
+			font-weight: normal;
+		}
+
+		.email-preview__date {
+			font-weight: normal;
 		}
 	}
 }
@@ -189,6 +205,7 @@
 }
 
 .email-preview__from {
+	font-weight: 700;
 	grid-area: from;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -220,11 +237,13 @@
 }
 
 .email-preview__subject {
+	font-weight: 700;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
 .email-preview__date {
+	font-weight: 700;
 	color: var(--mister-email-text-secondary);
 	justify-self: end;
 	margin-right: 10px;
