--- a/src/assets/css/cmps/email-folder-list.css
+++ b/src/assets/css/cmps/email-folder-list.css
@@ -1,21 +1,18 @@
 .email-folder-list {
-	display: flex;
-	flex-direction: column;
+	display: grid;
 	grid-area: menu;
+	grid-template-columns: 1fr;
+	grid-auto-rows: 32px;
+	width: 240px;
+	overflow-y: auto;
 
 	.email-folder-list__item {
 		align-items: center;
-		border-radius: 0 16px 16px 0;
-		display: flex;
-		gap: 18px;
-		height: 32px;
-		line-height: 32px;
-		max-width: 240px;
-		min-width: 240px;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		padding-left: 26px;
-		transition: margin 0.15s cubic-bezier(0.4,0,0.2,1), padding 0.15s cubic-bezier(0.4,0,0.2,1);
+		display: grid;
+		grid-template-columns: 32px 1fr;
+		padding-inline-start: 26px;
+		position: relative;
+		transition: margin 0.15s cubic-bezier(0.4, 0, 0.2, 1), padding 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 	}
 
 	.email-folder-list__item-icon {
@@ -23,12 +20,14 @@
 		background-repeat: no-repeat;
 		background-size: 20px;
 		height: 20px;
+		position: relative;
 		width: 20px;
-		
+		z-index: 1;
+
 		&.inbox {
 			background-image: url(../../images/icons/inbox.png);
 		}
-		
+
 		&.starred {
 			background-image: url(../../images/icons/starred.png);
 		}
@@ -41,28 +40,48 @@
 			background-image: url(../../images/icons/draft.png);
 		}
 	}
-	
+
 	.email-folder-list__item-text {
 		height: 20px;
 		line-height: 20px;
+		overflow: hidden;
+		position: relative;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		z-index: 1;
 	}
-	
-	.email-folder-list__item:hover {
+
+	.email-folder-list__item:hover::before {
 		background-color: var(--mister-email-hover);
-	}
-	
-	.email-folder-list__item.active {
-		background-color: var(--mister-email-active);
+		border-radius: 0 16px 16px 0;
 		box-shadow: inset 0 0 0 1px transparent;
 		color: #001d35;
+		content: "";
 		font-weight: 700;
+		height: 100%;
+		position: absolute;
+		transition: border-radius 0.15s cubic-bezier(0.4, 0, 0.2, 1), margin 0.15s cubic-bezier(0.4, 0, 0.2, 1), width 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+		width: 100%;
 	}
-	
+
+	.email-folder-list__item.active::before {
+		background-color: var(--mister-email-active);
+		border-radius: 0 16px 16px 0;
+		box-shadow: inset 0 0 0 1px transparent;
+		color: #001d35;
+		content: "";
+		font-weight: 700;
+		height: 100%;
+		position: absolute;
+		transition: border-radius 0.15s cubic-bezier(0.4, 0, 0.2, 1), margin 0.15s cubic-bezier(0.4, 0, 0.2, 1), width 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+		width: 100%;
+	}
+
 	.email-folder-list__item.active .email-folder-list__item-icon {
 		&.inbox {
 			background-image: url(../../images/icons/inbox-selected.png);
 		}
-		
+
 		&.starred {
 			background-image: url(../../images/icons/starred-selected.png);
 		}
@@ -74,5 +93,29 @@
 		&.draft {
 			background-image: url(../../images/icons/draft-selected.png);
 		}
+	}
+}
+
+.email-index.menu-collapsed:not(.folders-hovered) {
+	grid-template-columns: 72px 1fr 56px;
+
+	.email-folder-list__item-text {
+		display: none;
+	}
+
+	.email-folder-list__item:hover::before {
+		border-radius: 16px;
+		height: 32px;
+		margin-inline-start: 20px;
+		position: absolute;
+		width: 32px;
+	}
+
+	.email-folder-list__item.active::before {
+		border-radius: 16px;
+		height: 32px;
+		margin-inline-start: 20px;
+		position: absolute;
+		width: 32px;
 	}
 }
