--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,6 +7,7 @@
 /* Pages */
 @import "./pages/home-page.css";
 @import "./pages/email-index.css";
+@import "./pages/email-details.css";
 
 /* Components */
 @import "./cmps/email-list.css";
