--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -14,3 +14,4 @@
 @import "./cmps/email-filter.css";
 @import "./cmps/email-folder-list.css";
 @import "./cmps/email-preview.css";
+@import "./cmps/email-edit.css";
