--- a/src/assets/css/cmps/email-folder-list.css
+++ b/src/assets/css/cmps/email-folder-list.css
@@ -11,16 +11,65 @@
 	}
 
 	.email-folder-list__inner {
+		align-content: flex-start;
 		display: grid;
 		grid-area: menu;
 		grid-template-columns: 1fr;
-		grid-auto-rows: 32px;
 		width: 240px;
 		overflow-y: auto;
 
 		@media (max-width: 768px) {
 			background-color: var(--mister-email-background);
 			height: 100%;
+		}
+	}
+
+	.email-folder-list__folders {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-auto-rows: 32px;
+	}
+
+	.email-folder-list__compose {
+		display: flex;
+		height: 56px;
+		margin: 8px 0 16px 0;
+		padding: 0 0 0 8px;
+
+	}
+
+	.email-folder-list__compose-inner {
+		-webkit-font-smoothing: antialiased;
+		align-items: center;
+		background-color: #c2e7ff;
+		border: none;
+		border-radius: 16px;
+		color: var(--mister-email-folders-text);
+		cursor: pointer;
+		display: inline-flex;
+		font-weight: 500;
+		font-size: 1rem;
+		height: 56px;
+		line-height: 32px;
+		min-width: 96px;
+		padding: 0 24px 0 0;
+		transition: box-shadow .08s linear, min-width 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+		white-space: nowrap;
+
+
+		&::before {
+			background-image: url(../../images/icons/compose.png);
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: 24px;
+			content: "";
+			height: 20px;
+			min-width: 56px;
+			width: 20px;
+		}
+
+		&:hover {
+			box-shadow: 0 1px 3px 0 rgba(60, 64, 67, .3), 0 4px 8px 3px rgba(60, 64, 67, .15);
 		}
 	}
 
@@ -73,7 +122,7 @@
 		background-color: var(--mister-email-hover);
 		border-radius: 0 16px 16px 0;
 		box-shadow: inset 0 0 0 1px transparent;
-		color: #001d35;
+		color: var(--mister-email-folders-text);
 		content: "";
 		font-weight: 700;
 		height: 100%;
@@ -86,7 +135,7 @@
 		background-color: var(--mister-email-active);
 		border-radius: 0 16px 16px 0;
 		box-shadow: inset 0 0 0 1px transparent;
-		color: #001d35;
+		color: var(--mister-email-folders-text);
 		content: "";
 		font-weight: 700;
 		height: 100%;
@@ -115,16 +164,10 @@
 }
 
 .email-index.menu-collapsed {
+
 	/* Desktop behaviour */
 	&:not(.folders-hovered) {
 		@media (min-width: 769px) {
-			.email-folder-list {
-				@media (max-width: 768px) {
-					display: none;
-					grid-area: none;
-				}
-			}
-
 			.email-folder-list__item-text {
 				display: none;
 			}
@@ -143,6 +186,11 @@
 				margin-inline-start: 20px;
 				position: absolute;
 				width: 32px;
+			}
+
+			.email-folder-list__compose-inner {
+				min-width: 56px;
+				width: 56px;
 			}
 		}
 	}
