--- a/src/assets/css/cmps/email-edit.css
+++ b/src/assets/css/cmps/email-edit.css
@@ -1,9 +1,79 @@
 .email-edit {
-	background: rgba(0, 0, 0, 0.4);
-	display: grid;
-	height: 100%;
+	inset-block-end: 0;
+	inset-inline-end: 0;
 	position: fixed;
-	place-content: center;
-	width: 100%;
 	z-index: 7;
+
+	&.minimized {
+		.email-edit__action.minimize {
+			background-image: url('../../images/icons/maximize.png');
+		}
+
+		.email-edit__form {
+			display: none;
+		}
+	}
+
+	&.fullscreen {
+		.email-edit__action.fullscreen {
+			background-image: url('../../images/icons/exit-fullscreen.png');
+		}
+	}
+
+	.email-edit__inner {
+		border-radius: 8px 8px 0 0;
+		box-shadow: 0px 3px 14px 2px rgba(0, 0, 0, .12), 0px 5px 5px -3px rgba(0, 0, 0, .2), 0px 8px 10px 1px rgba(0, 0, 0, .14);
+		max-width: 100%;
+		overflow: hidden;
+		place-content: end;
+		width: 450px;
+	}
+ 
+	.email-edit__header {
+		background-color: var(--mister-email-background-tertiary);
+		display: grid;
+		grid-template-columns: 1fr auto;
+		font-weight: 500;
+		height: 40px;
+		line-height: 20px;
+		padding: 10px 0 10px 16px;
+	}
+
+	.email-edit__actions {
+		display: grid;
+		gap: 4px;
+		grid-template-columns: repeat(3, 1fr);
+		height: 16px;
+		padding-inline-end: 12px;
+		place-items: center;
+	}
+
+	.email-edit__action {
+		cursor: pointer;
+		height: 16px;
+		width: 16px;
+
+		&:hover {
+			background-color: rgba(68, 71, 70, 0.078);
+    		opacity: 1;
+		}
+
+		&.minimize {
+			background-image: url('../../images/icons/minimize.png');
+		}
+
+		&.fullscreen {
+			background-image: url('../../images/icons/fullscreen.png');
+		}
+
+		&.close {
+			background-image: url('../../images/icons/close.png');
+		}
+	}
+
+	.email-edit__form {
+		background-color: var(--mister-email-white);
+		display: grid;
+		height: 50vh;
+	}
 }
