--- a/src/assets/css/cmps/email-edit.css
+++ b/src/assets/css/cmps/email-edit.css
@@ -4,6 +4,10 @@
 	position: fixed;
 	z-index: 7;
 
+	::-webkit-input-placeholder {
+		color: #747775;
+	}
+
 	&.minimized {
 		.email-edit__action.minimize {
 			background-image: url('../../images/icons/maximize.png');
@@ -33,6 +37,7 @@
 		background-color: var(--mister-email-background-tertiary);
 		display: grid;
 		grid-template-columns: 1fr auto;
+		font-size: 1rem;
 		font-weight: 500;
 		height: 40px;
 		line-height: 20px;
@@ -74,6 +79,44 @@
 	.email-edit__form {
 		background-color: var(--mister-email-white);
 		display: grid;
+		grid-template-rows: auto auto auto 1fr auto;
 		height: 50vh;
+		line-height: 27px;
+		padding: 0 16px;
+
+		label {
+			color: #444746
+		}
+
+		input {
+			border: none;
+			color: #444;
+			outline: none;
+		}
+
+		.two-items {
+			box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, .12);
+			display: grid;
+			grid-template-columns: auto 1fr;
+			gap: 8px;
+			margin-block-start: 7px;
+			padding: 1px 0 3px;
+		}
+	}
+
+	.email-edit__subject {
+		box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, .12);
+		color: #222;
+		line-height: inherit;
+		margin-block-start: 7px;
+		padding: 1px 0 3px;
+	}
+
+	.email-edit__body {
+		border: none;
+		color: #222;
+		line-height: 1.5;
+		outline: none;
+		padding: 10px 0
 	}
 }
