--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -8,10 +8,10 @@
 @import "./pages/home-page.css";
 @import "./pages/email-index.css";
 @import "./pages/email-details.css";
+@import "./pages/email-edit.css";
 
 /* Components */
 @import "./cmps/email-list.css";
 @import "./cmps/email-filter.css";
 @import "./cmps/email-folder-list.css";
 @import "./cmps/email-preview.css";
-@import "./cmps/email-edit.css";
